--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>Lucent Lu - Resume</title>
-</head>
+---
+layout: default
+---
 <body>
     <header>
+        <title>Lucent Lu - Resume</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <h1>Lucent Lu</h1>
         <p>
             📧 <a href="mailto:chenglu.lucent@gmail.com">chenglu.lucent@gmail.com</a> | 🇺🇸 +1 (518) 308-5560 | 🇭🇰+852 97945525 |
