--- a/index.html
+++ b/index.html
@@ -1,120 +1,156 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lucent Lu - Resume</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/3.0.0/pure-min.css" integrity="sha512-X2yGIVwg8zeG8N4xZWlFTZl1K2/P8gUFxpuKDUjK2AxdOZMsaVNbaeBaA+oMvzW0gPCvZmk9Xuqq3xP7vIdASg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        .banner {
+            width: 100%;
+            height: 200px;
+            background-image: url("assets/banner.png");
+            background-size: cover;
+            background-position: center;
+        }
+        .content {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        .header {
+            text-align: center;
+            margin-bottom: 2em;
+        }
+        .contact-info {
+            font-size: 0.9em;
+            margin-bottom: 1em;
+        }
+        .section {
+            margin-bottom: 2em;
+        }
+        .pure-menu-link {
+            color: #3498db;
+        }
+        .pure-menu-link:hover {
+            background-color: #f0f0f0;
+        }
+        @media (max-width: 48em) {
+            .content {
+                padding: 10px;
+            }
+        }
+    </style>
+</head>
 <body>
-    <header>
-        <title>Lucent Lu - Resume</title>
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <h1>Lucent Lu</h1>
-        <p>
-            📧 <a href="mailto:chenglu.lucent@gmail.com">chenglu.lucent@gmail.com</a> | 🇺🇸 +1 (518) 308-5560 | 🇭🇰+852 97945525 |
-            Troy, NY & Hong Kong | <a href="https://lucent-lu.me">Website</a>
-        </p>
-    </header>
+    <div class="banner"></div>
+    <div class="content">
+        <div class="header">
+            <h1>Lucent Lu</h1>
+            <div class="contact-info">
+                📧 chenglu.lucent@gmail.com | 🇺🇸 +1 (518) 308-5560 | 🇭🇰 +852 97945525<br>
+                Troy, NY & Hong Kong | <a href="https://lucent-lu.me">Website</a>
+            </div>
+        </div>
 
-    <nav>
-        <ul>
-            <li><a href="https://lucent-lu.me/projects.html">Projects</a></li>
-            <li><a href="#work-experience">Work Experience</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#certifications-skills-interests">Certifications, Skills & Interests</a></li>
-        </ul>
-    </nav>
-
-    <main>
-        <section id="work-experience">
-            <h2>Work Experience</h2>
-
-            <article>
-                <h3>MIT Innovation Node Hong Kong</h3>
-                <p><strong>Intern, Teaching Assistant</strong> | Hong Kong | Apr. 2023 - Present</p>
-                <ul>
-                    <li>As a part of MIT's global initiatives, the MIT Innovation Node Hong Kong focuses on advancing technology and entrepreneurship in the region.</li>
-                    <li>Conducted research to support various initiatives, focusing on emerging technologies and their impact on local industries.</li>
-                    <li>Participated in workshops and brainstorming sessions to foster innovation and support the ideation of new projects within the organization.</li>
-                    <li>Assisted in providing support in course materials and assisting students with their inquiries to enhance their learning experience.</li>
-                </ul>
-            </article>
-
-            <article>
-                <h3>Freelance</h3>
-                <p><strong>Web Developer</strong> | Remote | May 2021 - Present</p>
-                <ul>
-                    <li>Freelance web developer with 5+ years of experience creating custom, responsive websites for small businesses and startups.</li>
-                    <li>Proficient in HTML, CSS, JavaScript, JS framework (VueJS), WordPress, and Drag-and-drop interfaces (Wix, Squarespace, etc.)</li>
-                </ul>
-            </article>
-
-            <article>
-                <h3>St. Paul's Co-educational College</h3>
-                <p><strong>Teaching Assistant</strong> | Hong Kong SAR | Jul. 2023 - Jul. 2023</p>
-                <ul>
-                    <li>St. Paul's Co-educational College (SPCC) in Hong Kong is a prestigious, private school known for its strong bilingual education program and high university admission rates.</li>
-                    <li>Led MIT Node HK-affiliated summer coding program, SPCC Summer Portal, for students at SPCC Hong Kong.</li>
-                    <li>Helping Primary & Secondary students develop computational thinking and code debugging.</li>
-                </ul>
-            </article>
-
-            <article>
-                <h3>Codabot</h3>
-                <p><strong>Project Manager/Teacher</strong> | Hong Kong | Jun. 2021 - Oct. 2022</p>
-                <ul>
-                    <li>Education company based in Hong Kong. Offers local K-12 schools extracurricular programs. Subsidiary start-up company, Emersiv.ai, develops smart learning, gamify, and content management platforms for schools and educational institutions.</li>
-                    <li>Led a team of 4 web developers to create a working beta product for the first round of venture capital using Unity, ReactJS, and AWS across 3 time zones.</li>
-                    <li>Certified K-12 teachers specialize in teaching computational thinking to young learners using Lego blocks, Scratch, etc.</li>
-                </ul>
-            </article>
-        </section>
-
-        <section id="education">
-            <h2>Education</h2>
-
-            <article>
-                <h3>Rensselaer Polytechnic Institute</h3>
-                <p><strong>Bachelor of Engineering - BE in Computer Engineering</strong></p>
-                <p>Aug 2025 - May 2028 | Troy, NY</p>
-            </article>
-
-            <article>
-                <h3>Li Po Chun United World College of Hong Kong</h3>
-                <p><strong>Major: International Baccalaureate - Math AA, Physics, Geography Higher Level; Chinese A, English A, Chemistry Standard Level</strong></p>
-                <p>2022 - 2024 | New Territories, Hong Kong SAR</p>
-            </article>
-
-            <article>
-                <h3>American International School Kowloon, Hong Kong</h3>
-                <p><strong>Grade 6-10</strong></p>
-                <p>Aug. 2017 - May 2021 | Kowloon, Hong Kong SAR</p>
-                <ul>
-                    <li>GPA: 3.96/4.0</li>
-                </ul>
-            </article>
-        </section>
-
-        <section id="certifications-skills-interests">
-            <h2>Certifications, Skills & Interests</h2>
-
-            <h3>Certifications:</h3>
-            <ul>
-                <li>Automating Real-World Tasks with Python</li>
-                <li>Google IT Automation with Python Specialization</li>
-                <li>Configuration Management and the Cloud</li>
-                <li>Troubleshooting and Debugging Techniques</li>
-                <li>Introduction to Git and GitHub</li>
-                <li>Using Python to Interact with the Operating System</li>
-                <li>Crash Course on Python</li>
+        <div class="pure-menu pure-menu-horizontal">
+            <ul class="pure-menu-list">
+                <li class="pure-menu-item"><a href="https://lucent-lu.me/projects.html" class="pure-menu-link">Projects</a></li>
+                <li class="pure-menu-item"><a href="#work-experience" class="pure-menu-link">Work Experience</a></li>
+                <li class="pure-menu-item"><a href="#education" class="pure-menu-link">Education</a></li>
+                <li class="pure-menu-item"><a href="#certifications-skills-interests" class="pure-menu-link">Certifications, Skills & Interests</a></li>
             </ul>
+        </div>
 
-            <h3>Skills:</h3>
-            <ul>
-                <li>Event Coordination; Team Leadership; Mobile Application Development; Public Speaking; Google Cloud Platform (GCP); Front-End Development; Back-End Web Development; Logistics Management; Working with Children; Teaching; Technical Support; Project Management; Web Development (WordPress/Squarespace/Shopify); Google Cloud Platform (GCP); Front-End Development; Back-End Web Development (Python/C#); Amazon Web Service (AWS).</li>
-            </ul>
+        <div class="pure-g">
+            <div class="pure-u-1">
+                <div id="work-experience" class="section">
+                    <h2>Work Experience</h2>
+                    
+                    <h3>MIT Innovation Node Hong Kong</h3>
+                    <p><strong>Intern, Teaching Assistant</strong> | Hong Kong | Apr. 2023 - Present</p>
+                    <ul>
+                        <li>As a part of MIT's global initiatives, the MIT Innovation Node Hong Kong focuses on advancing technology and entrepreneurship in the region.</li>
+                        <li>Conducted research to support various initiatives, focusing on emerging technologies and their impact on local industries.</li>
+                        <li>Participated in workshops and brainstorming sessions to foster innovation and support the ideation of new projects within the organization.</li>
+                        <li>Assisted in providing support in course materials and assisting students with their inquiries to enhance their learning experience.</li>
+                    </ul>
 
-            <h3>Interests:</h3>
-            <ul>
-                <li>Squash, Reading, Workout, Building Computers, Walks, Meeting new people, Puzzles</li>
-            </ul>
-        </section>
-    </main>
+                    <h3>Freelance</h3>
+                    <p><strong>Web Developer</strong> | Remote | May 2021 - Present</p>
+                    <ul>
+                        <li>Freelance web developer with 5+ years of experience creating custom, responsive websites for small businesses and startups.</li>
+                        <li>Proficient in HTML, CSS, JavaScript, JS framework (VueJS), WordPress, and Drag-and-drop interfaces (Wix, Squarespace, etc.)</li>
+                    </ul>
+
+                    <h3>St. Paul's Co-educational College</h3>
+                    <p><strong>Teaching Assistant</strong> | Hong Kong SAR | Jul. 2023 - Jul. 2023</p>
+                    <ul>
+                        <li>St. Paul's Co-educational College (SPCC) in Hong Kong is a prestigious, private school known for its strong bilingual education program and high university admission rates.</li>
+                        <li>Led MIT Node HK-affiliated summer coding program, SPCC Summer Portal, for students at SPCC Hong Kong.</li>
+                        <li>Helping Primary & Secondary students develop computational thinking and code debugging.</li>
+                    </ul>
+
+                    <h3>Codabot</h3>
+                    <p><strong>Project Manager/Teacher</strong> | Hong Kong | Jun. 2021 - Oct. 2022</p>
+                    <ul>
+                        <li>Education company based in Hong Kong. Offers local K-12 schools extracurricular programs. Subsidiary start-up company, Emersiv.ai, develops smart learning, gamify, and content management platforms for schools and educational institutions.</li>
+                        <li>Led a team of 4 web developers to create a working beta product for the first round of venture capital using Unity, ReactJS, and AWS across 3 time zones.</li>
+                        <li>Certified K-12 teachers specialize in teaching computational thinking to young learners using Lego blocks, Scratch, etc.</li>
+                    </ul>
+                </div>
+
+                <div id="education" class="section">
+                    <h2>Education</h2>
+
+                    <h3>Rensselaer Polytechnic Institute</h3>
+                    <p><strong>Bachelor of Engineering - BE in Computer Engineering</strong></p>
+                    <p>Aug 2025 - May 2028 | Troy, NY</p>
+
+                    <h3>Li Po Chun United World College of Hong Kong</h3>
+                    <p><strong>Major: International Baccalaureate - Math AA, Physics, Geography Higher Level; Chinese A, English A, Chemistry Standard Level</strong></p>
+                    <p>2022 - 2024 | New Territories, Hong Kong SAR</p>
+
+                    <h3>American International School Kowloon, Hong Kong</h3>
+                    <p><strong>Grade 6-10</strong></p>
+                    <p>Aug. 2017 - May 2021 | Kowloon, Hong Kong SAR</p>
+                    <ul>
+                        <li>GPA: 3.96/4.0</li>
+                    </ul>
+                </div>
+
+                <div id="certifications-skills-interests" class="section">
+                    <h2>Certifications, Skills & Interests</h2>
+
+                    <h3>Certifications:</h3>
+                    <ul>
+                        <li>Automating Real-World Tasks with Python</li>
+                        <li>Google IT Automation with Python Specialization</li>
+                        <li>Configuration Management and the Cloud</li>
+                        <li>Troubleshooting and Debugging Techniques</li>
+                        <li>Introduction to Git and GitHub</li>
+                        <li>Using Python to Interact with the Operating System</li>
+                        <li>Crash Course on Python</li>
+                    </ul>
+
+                    <h3>Skills:</h3>
+                    <p>Event Coordination; Team Leadership; Mobile Application Development; Public Speaking; Google Cloud Platform (GCP); Front-End Development; Back-End Web Development; Logistics Management; Working with Children; Teaching; Technical Support; Project Management; Web Development (WordPress/Squarespace/Shopify); Google Cloud Platform (GCP); Front-End Development; Back-End Web Development (Python/C#); Amazon Web Service (AWS).</p>
+
+                    <h3>Interests:</h3>
+                    <p>Squash, Reading, Workout, Building Computers, Walks, Meeting new people, Puzzles</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
