--- a/projects.html
+++ b/projects.html
@@ -1,27 +1,60 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lucent Lu - Projects</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/3.0.0/pure-min.css" integrity="sha512-X2yGIVwg8zeG8N4xZWlFTZl1K2/P8gUFxpuKDUjK2AxdOZMsaVNbaeBaA+oMvzW0gPCvZmk9Xuqq3xP7vIdASg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="assets/styles.css" />
+</head>
 <body>
-    <header>
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <title>Lucent Lu - Resume</title>
-        <h1>Lucent Lu</h1>
-        <p>
-            📧 <a href="mailto:chenglu.lucent@gmail.com">chenglu.lucent@gmail.com</a> | 🇺🇸 +1 (518) 308-5560 | 🇭🇰+852 97945525 |
-            Troy, NY & Hong Kong | <a href="https://lucent-lu.me">Website</a>
-        </p>
-    </header>
+    <div class="banner"></div>
+    <div class="content">
+        <div class="header">
+            <h1>Lucent Lu</h1>
+            <div class="contact-info">
+                📧 chenglu.lucent@gmail.com | 🇺🇸 +1 (518) 308-5560 | 🇭🇰 +852 97945525<br>
+                Troy, NY & Hong Kong | Website: <a href="https://lucent-lu.me">lucent-lu.me</a>
+            </div>
+        </div>
 
-    <nav>
-        <ul>
-            <li><a href="https://lucent-lu.me/projects">projects</a></li>
-            <li><a href="#work-experience">Work Experience</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#certifications-skills-interests">Certifications, Skills & Interests</a></li>
-        </ul>
-    </nav>
-    <main>
-        <h1>Projects go here</h1>
-    </main>
+        <div class="pure-menu pure-menu-horizontal menu">
+            <ul class="pure-menu-list">
+                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
+                <li class="pure-menu-item"><a href="projects.html" class="pure-menu-link">Projects</a></li>
+                <li class="pure-menu-item"><a href="index.html#work-experience" class="pure-menu-link">Work Experience</a></li>
+                <li class="pure-menu-item"><a href="index.html#education" class="pure-menu-link">Education</a></li>
+                <li class="pure-menu-item"><a href="index.html#certifications-skills-interests" class="pure-menu-link">Certifications, Skills & Interests</a></li>
+            </ul>
+        </div>
+
+        <div class="pure-g">
+            <div class="pure-u-1">
+                <div id="projects" class="section">
+                    <h2>Projects</h2>
+                    
+                    <!-- Example project structure. Replace with your actual projects. -->
+                    <h3>Project 1</h3>
+                    <p><strong>Description:</strong> Brief description of Project 1.</p>
+                    <ul>
+                        <li>Key feature or achievement 1</li>
+                        <li>Key feature or achievement 2</li>
+                        <li>Technologies used: Tech1, Tech2, Tech3</li>
+                    </ul>
+
+                    <h3>Project 2</h3>
+                    <p><strong>Description:</strong> Brief description of Project 2.</p>
+                    <ul>
+                        <li>Key feature or achievement 1</li>
+                        <li>Key feature or achievement 2</li>
+                        <li>Technologies used: Tech1, Tech2, Tech3</li>
+                    </ul>
+
+                    <!-- Add more projects as needed -->
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
