updated meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lucent Lu - RPI Undergraduate in Computer & System Engineering, Freelance web developer, MIT Innovation Node intern, and volunteer with expertise in web development, emerging technologies, and education. Explore work experience, education, and volunteer projects.">
     <title>Lucent Lu</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/3.0.0/pure-min.css" integrity="sha512-X2yGIVwg8zeG8N4xZWlFTZl1K2/P8gUFxpuKDUjK2AxdOZMsaVNbaeBaA+oMvzW0gPCvZmk9Xuqq3xP7vIdASg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
@@ -71,7 +72,7 @@
                     <h2>Education</h2>
 
                     <h3>Rensselaer Polytechnic Institute</h3>
-                    <p><strong>Bachelor of Engineering - BE in Computer Engineering</strong></p>
+                    <p><strong>Bachelor of Engineering - BE in Computer & System Engineering</strong></p>
                     <p>Aug 2025 - May 2028 | Troy, NY</p>
 
                     <h3>Li Po Chun United World College of Hong Kong</h3>
