--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lucent Lu - RPI Undergraduate in Computer & System Engineering, Freelance web developer, MIT Innovation Node intern, and volunteer with expertise in web development, emerging technologies, and education. Explore work experience, education, and volunteer projects.">
-    <title>Lucent Lu</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/3.0.0/pure-min.css" integrity="sha512-X2yGIVwg8zeG8N4xZWlFTZl1K2/P8gUFxpuKDUjK2AxdOZMsaVNbaeBaA+oMvzW0gPCvZmk9Xuqq3xP7vIdASg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Lucent Lu - Home</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
 </head>
 <body>
@@ -15,112 +15,132 @@
             <h1>Lucent Lu</h1>
             <div class="contact-info">
                 📧 <a href="mailto:chenglu.lucent@gmail.com">chenglu.lucent@gmail.com</a> | 🇺🇸 +1 (518) 308-5560 | 🇭🇰 +852 97945525<br>
-                Troy, NY & Hong Kong | Website: <a href="https://lucent-lu.me">lucent-lu.me</a>
+                Troy, NY & Hong Kong | Website: <a href="https://lucent-lu.me">lucent-lu.me</a> | <a href="https://www.linkedin.com/in/cheng-lu-058854264/">Linkedin</a>
             </div>
         </div>
 
-        <div class="pure-menu pure-menu-horizontal menu"> 
+        <div class="pure-menu pure-menu-horizontal menu">
             <ul class="pure-menu-list">
-                <!--<li class="pure-menu-item"><a href="https://lucent-lu.me/projects.html" class="pure-menu-link">Projects</a></li>-->
-                <li class="pure-menu-item"><a href="#work-experience" class="pure-menu-link">Work Experience</a></li>
                 <li class="pure-menu-item"><a href="#education" class="pure-menu-link">Education</a></li>
-                <li class="pure-menu-item"><a href="#volunteer" class="pure-menu-link">Volunteer</a></li>
-                <li class="pure-menu-item"><a href="#certifications-skills-interests" class="pure-menu-link">Certifications, Skills & Interests</a></li>
+                <li class="pure-menu-item"><a href="#skills" class="pure-menu-link">Skills</a></li>
+                <li class="pure-menu-item"><a href="#work-experience" class="pure-menu-link">Work Experience</a></li>
+                <li class="pure-menu-item"><a href="#projects" class="pure-menu-link">Projects</a></li>
+                <li class="pure-menu-item"><a href="#activities-volunteering" class="pure-menu-link">Activities & Volunteering</a></li>
+                <li class="pure-menu-item"><a href="#certifications" class="pure-menu-link">Certifications</a></li>
             </ul>
         </div>
 
-        <div class="pure-g">
+        <div class="pure-g"></div>
             <div class="pure-u-1">
+                <div id="education" class="section">
+                    <h2>Education</h2>
+
+                    <h3>Rensselaer Polytechnic Institute, School of Engineering — Troy, NY</h3>
+                    <p><strong>Bachelor of Engineering, Computer & System Engineering</strong></p>
+                    <p>August 2024 - May 2028</p>
+
+                    <h3>Li Po Chun United World College — Hong Kong</h3>
+                    <p><strong>IBDP: Bilingual Diploma Awarded</strong></p>
+                    <p>Higher level: Physics, Math AA, Geography; Standard level: English A, Chinese A, Chemistry</p>
+                    <p>August 2022 - May 2024</p>
+                </div>
+                <hr>
+
+                <div id="skills" class="section"></div>
+                    <h2>Technical Skills</h2>
+
+                    <h3>Technical Skills:</h3>
+                    <p>Python, MySQL, Git, C++, HTML, CSS, Vuejs, Nodejs, AWS, GCP, Docker, Bash, Networking, Project Management, Video Editing</p>
+                </div>
+                <hr>
+
+
                 <div id="work-experience" class="section">
                     <h2>Work Experience</h2>
                     
                     <h3>MIT Innovation Node Hong Kong</h3>
-                    <p><strong>Intern, Teaching Assistant</strong> | Hong Kong | Apr. 2023 - Present</p>
+                    <p><strong>Intern, Teaching Assistant</strong> | Hong Kong | April 2023 – August 2024</p>
                     <ul>
-                        <li>As a part of MIT's global initiatives, the MIT Innovation Node Hong Kong focuses on advancing technology and entrepreneurship in the region.</li>
-                        <li>Conducted research to support various initiatives, focusing on emerging technologies and their impact on local industries.</li>
+                        <li>Conducted research to support MIT Node incentives, focused on emerging technologies and their impact on local education.</li>
                         <li>Participated in workshops and brainstorming sessions to foster innovation and support the ideation of new projects within the organization.</li>
-                        <li>Assisted in providing support in course materials and assisting students with their inquiries to enhance their learning experience.</li>
+                        <li>Assisted in providing support in course materials and assisting students to enhance their learning experience.</li>
                     </ul>
 
-                    <h3>Freelance</h3>
-                    <p><strong>Web Developer</strong> | Remote | May 2021 - Present</p>
+                    <h3>Freelance Web Developer</h3>
+                    <p><strong>Freelance/Remote</strong> | Hong Kong | May 2021 - Present</p>
                     <ul>
                         <li>Freelance web developer with 5+ years of experience creating custom, responsive websites for small businesses and startups.</li>
-                        <li>Proficient in HTML, CSS, JavaScript, JS framework (VueJS), WordPress, and Drag-and-drop interfaces (Wix, Squarespace, etc.)</li>
+                        <li>Proficient in HTML, CSS, JavaScript, JS framework (VueJS), WordPress, and drag-and-drop interfaces (Wix, Squarespace, etc.)</li>
                     </ul>
 
                     <h3>St. Paul's Co-educational College</h3>
-                    <p><strong>Teaching Assistant</strong> | Hong Kong SAR | Jul. 2023 - Jul. 2023</p>
+                    <p><strong>Head of Teaching Assistant</strong> | Hong Kong | July 2023 - July 2024</p>
                     <ul>
-                        <li>St. Paul's Co-educational College (SPCC) in Hong Kong is a prestigious, private school known for its strong bilingual education program and high university admission rates.</li>
                         <li>Led MIT Node HK-affiliated summer coding program, SPCC Summer Portal, for students at SPCC Hong Kong.</li>
-                        <li>Helping Primary & Secondary students develop computational thinking and code debugging.</li>
+                        <li>Helped Primary & Secondary students develop computational thinking and code debugging skills.</li>
                     </ul>
 
                     <h3>Codabot</h3>
-                    <p><strong>Project Manager/Teacher</strong> | Hong Kong | Jun. 2021 - Oct. 2022</p>
+                    <p><strong>Project Manager/Teacher</strong> | Hong Kong | June 2021 - Oct. 2022</p>
                     <ul>
-                        <li>Education company based in Hong Kong. Offers local K-12 schools extracurricular programs. Subsidiary start-up company, Emersiv.ai, develops smart learning, gamify, and content management platforms for schools and educational institutions.</li>
-                        <li>Led a team of 4 web developers to create a working beta product for the first round of venture capital using Unity, ReactJS, and AWS across 3 time zones.</li>
-                        <li>Certified K-12 teachers specialize in teaching computational thinking to young learners using Lego blocks, Scratch, etc.</li>
+                        <li>Led 4 web developers to create a working beta product for the subsidiary company of Codabot, Exmersive.ai, for the first round of venture capital using Unity, ReactJS, and AWS across 3 time zones.</li>
+                        <li>Certified K-12 teacher specializing in teaching computational thinking to young learners using Lego blocks, Scratch, etc.</li>
                     </ul>
                 </div>
                 <hr>
 
-                <div id="education" class="section">
-                    <h2>Education</h2>
+                <div id="projects" class="section">
+                    <h2>Projects</h2>
 
-                    <h3>Rensselaer Polytechnic Institute</h3>
-                    <p><strong>Bachelor of Engineering - BE in Computer & System Engineering</strong></p>
-                    <p>Aug 2025 - May 2028 | Troy, NY</p>
-
-                    <h3>Li Po Chun United World College of Hong Kong</h3>
-                    <p><strong>Courses: International Baccalaureate - Math AA, Physics, Geography Higher Level; Chinese A, English A, Chemistry Standard Level; Bilingual Diploma Awarded</strong></p>
-                    <p>Programming club, Basketball team, United World Schools Team, Workout! Club</p>
-                    <p>2022 - 2024 | New Territories, Hong Kong SAR</p>
-
-                    <h3>American International School Kowloon, Hong Kong</h3>
-                    <p><strong>Grade 6-10</strong></p>
-                    <p>Aug. 2017 - May 2021 | Kowloon, Hong Kong SAR</p>
+                    <h3>Custom Card Swipe System</h3>
+                    <p><strong>Passion project</strong> | Hong Kong | Sept. 2023 – May 2024</p>
                     <ul>
-                        <li>GPA: 3.96/4.0</li>
+                        <li>Utilized Python, Raspberry Pi, RFID to create a custom card swipe system for students at Li Po Chun United World College</li>
+                        <li>Worked closely with school admin to fit safety requirements and implemented necessary features</li>
+                    </ul>
+
+                    <h3>Independent Machine Learning Research</h3>
+                    <p>Hong Kong | March 2022 – Oct. 2023</p>
+                    <ul>
+                        <li>Utilized Python, Tensorflow, numpy to conduct research with the Long Short Term Memory algorithm to predict the closing price of S&P 500.</li>
+                        <li>Wrote a 4000 words essay regarding the topic independently for IBDP Extended Essay.</li>
                     </ul>
                 </div>
                 <hr>
 
-                <div id="volunteer" class="section">
-                    <h2>Volunteer</h2>
+                <div id="activities-volunteering" class="section">
+                    <h2>Activities & Volunteering</h2>
+
+                    <h3>Rensselaer Motorsport</h3>
+                    <p><strong>Member of Control Team</strong> | Sept. 2024 - Present</p>
+                    <ul>
+                        <li>Develop custom VCU with C++ and Github; utilized and developed software with Motec ECU and M1 Build.</li>
+                        <li>Work in the team of ~12 members</li>
+                    </ul>
 
                     <h3>Rural Education Experts Cambodia</h3>
-                    <p><strong>Volunteer, Website Developer, Video Editor</strong> | Hong Kong | Apr. 2023 - Present</p>
+                    <p><strong>Volunteer, Website Developer, Video Editor</strong> | Aug. 2023 - Present</p>
                     <ul>
-                        <li>Continuing my support from United World Schools team in highschool to help them build schools and create website for fundraising</li>
+                        <li>Continuing support from United World Schools team to help them build schools and create websites for fundraising</li>
                         <li>Created website: <a href="https://reec.org.kh">https://reec.org.kh</a></li>
-                        <li>Created video for social media: <a href="https://www.instagram.com/reec.org.kh/">@reec.org.kh</a></li>
+                        <li>Created video for social media: <a href="https://www.instagram.com/reec.org.kh/">@reec.org.kh</a> (Instagram)</li>
+                    </ul>
+
+                    <h3>Li Po Chun Quan Cai</h3>
+                    <p>Aug. 2022 – May 2024</p>
+                    <ul>
+                        <li>Programming club, Basketball team, United World Schools Team, Peer Tutoring Tutor, Workout! Club</li>
                     </ul>
                 </div>
                 <hr>
 
-                <div id="certifications-skills-interests" class="section">
-                    <h2>Certifications, Skills & Interests</h2>
+                <div id="certifications" class="section">
+                    <h2>Certifications</h2>
 
                     <h3>Certifications:</h3>
                     <ul>
                         <li><a href="https://coursera.org/share/fe2560edaa7c3e4c0e19b31e1f6f96e7">Google IT Automation with Python</a></li>
-                        <li>Troubleshooting and Debugging Techniques</li>
-                        <li>Automating Real-World Tasks with Python</li>
-                        <li>Using Python to Interact with the Operating System</li>
-                        <li>Configuration Management and the Cloud</li>
-                        <li>Introduction to Git and GitHub</li>
-                        <li>Crash Course on Python</li>
                     </ul>
-
-                    <h3>Skills:</h3>
-                    <p>Event Coordination; Team Leadership; Mobile Application Development; Public Speaking; Google Cloud Platform (GCP); Front-End Development; Back-End Web Development; Logistics Management; Working with Children; Teaching; Technical Support; Project Management; Web Development (WordPress/Squarespace/Shopify); Google Cloud Platform (GCP); Front-End Development; Back-End Web Development (Python/C#); Amazon Web Service (AWS).</p>
-
-                    <h3>Interests:</h3>
-                    <p>Squash, Reading, Workout, Building Computers, Walks, Meeting new people, Puzzles</p>
                 </div>
             </div>
         </div>
