--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <h1>Lucent Lu</h1>
             <div class="contact-info">
                 📧 <a href="mailto:chenglu.lucent@gmail.com">chenglu.lucent@gmail.com</a> | 🇺🇸 +1 (518) 308-5560 | 🇭🇰 +852 97945525<br>
-                Troy, NY & Hong Kong | Website: <a href="https://lucent-lu.me">lucent-lu.me</a> | <a href="https://www.linkedin.com/in/cheng-lu-058854264/">Linkedin</a>
+                Troy, NY & Hong Kong | Website: <a href="https://lucent-lu.me">lucent-lu.me</a> | <a href="https://www.linkedin.com/in/cheng-lu-058854264/" target="_blank">Linkedin</a> | <a href="https://drive.google.com/file/d/1CXj4hZwOkJFW8glStMhg-yn7GUVUGu4x/view?usp=sharing" target="_blank">Resume</a>
             </div>
         </div>
 
-        <div class="pure-menu pure-menu-horizontal menu">
+        <div class="pure-menu pure-menu-horizontal menu pure-menu-scrollable">
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="#education" class="pure-menu-link">Education</a></li>
                 <li class="pure-menu-item"><a href="#skills" class="pure-menu-link">Skills</a></li>
