--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h2>Education</h2>
 
                     <h3>Rensselaer Polytechnic Institute, School of Engineering — Troy, NY</h3>
-                    <p><strong>Bachelor of Engineering, Computer & System Engineering</strong></p>
+                    <p><strong>Bachelor of Engineering, Computer & System Engineering; Intended dual: Electrical Engineering/Philosophy</strong></p>
                     <p>August 2024 - May 2028</p>
 
                     <h3>Li Po Chun United World College — Hong Kong</h3>
@@ -50,7 +50,7 @@
                     <h2>Technical Skills</h2>
 
                     <h3>Technical Skills:</h3>
-                    <p>Python, MySQL, Git, C++, HTML, CSS, Vuejs, Nodejs, AWS, GCP, Docker, Bash, Networking, Project Management, Video Editing</p>
+                    <p>Python, MySQL, Git, C++, HTML, CSS, Vuejs, Nodejs, AWS, GCP, Docker, Bash, Linux, Networking, MATLAB, Siemens NX, LTSpice, Project Management, Video Editing </p>
                 </div>
                 <hr>
 
@@ -69,14 +69,14 @@
                     <h3>Freelance Web Developer</h3>
                     <p><strong>Freelance/Remote</strong> | Hong Kong | May 2021 - Present</p>
                     <ul>
-                        <li>Freelance web developer with 5+ years of experience creating custom, responsive websites for small businesses and startups.</li>
+                        <li>Freelance web developer with experience creating custom, responsive websites for 5+ small businesses and startups.</li>
                         <li>Proficient in HTML, CSS, JavaScript, JS framework (VueJS), WordPress, and drag-and-drop interfaces (Wix, Squarespace, etc.)</li>
                     </ul>
 
                     <h3>St. Paul's Co-educational College</h3>
                     <p><strong>Head of Teaching Assistant</strong> | Hong Kong | July 2023 - July 2024</p>
                     <ul>
-                        <li>Led MIT Node HK-affiliated summer coding program, SPCC Summer Portal, for students at SPCC Hong Kong.</li>
+                        <li>Led MIT Node HK-affiliated summer coding program, SPCC Summer Portal, for 200+ students at SPCC Hong Kong.</li>
                         <li>Helped Primary & Secondary students develop computational thinking and code debugging skills.</li>
                     </ul>
 
@@ -95,7 +95,7 @@
                     <h3>Custom Card Swipe System</h3>
                     <p><strong>Passion project</strong> | Hong Kong | Sept. 2023 – May 2024</p>
                     <ul>
-                        <li>Utilized Python, Raspberry Pi, RFID to create a custom card swipe system for students at Li Po Chun United World College</li>
+                        <li>Utilized Python, MySQL, Raspberry Pi, RFID, and Machine Learning to create a custom card swipe system with facial recognition for Li Po Chun United World College; process 500+ swipes per day.</li>
                         <li>Worked closely with school admin to fit safety requirements and implemented necessary features</li>
                     </ul>
 
