--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="banner"></div>
     <div class="content">
         <div class="header">
-            <h1>Lucent Lu</h1>
+            <h1>Lucent Lu 👋</h1>
             <div class="contact-info">
                 📧 <a href="mailto:chenglu.lucent@gmail.com">chenglu.lucent@gmail.com</a> | 🇺🇸 +1 (518) 308-5560 | 🇭🇰 +852 97945525<br>
                 Troy, NY & Hong Kong | Website: <a href="https://lucent-lu.me">lucent-lu.me</a> | <a href="https://www.linkedin.com/in/cheng-lu-058854264/" target="_blank">Linkedin</a> | <a href="https://drive.google.com/file/d/1CXj4hZwOkJFW8glStMhg-yn7GUVUGu4x/view?usp=sharing" target="_blank">Resume</a>
@@ -26,7 +26,6 @@
                 <li class="pure-menu-item"><a href="#work-experience" class="pure-menu-link">Work Experience</a></li>
                 <li class="pure-menu-item"><a href="#projects" class="pure-menu-link">Projects</a></li>
                 <li class="pure-menu-item"><a href="#activities-volunteering" class="pure-menu-link">Activities & Volunteering</a></li>
-                <li class="pure-menu-item"><a href="#certifications" class="pure-menu-link">Certifications</a></li>
             </ul>
         </div>
 
@@ -37,20 +36,26 @@
 
                     <h3>Rensselaer Polytechnic Institute, School of Engineering — Troy, NY</h3>
                     <p><strong>Bachelor of Engineering, Computer & System Engineering; Intended dual: Electrical Engineering/Philosophy</strong></p>
-                    <p>August 2024 - May 2028</p>
+                    <p>Relevant Courses: CS I, Intro to ECSE, Calc II, Engineering Communication; Credit granted: Physics I & II, Calc I</p>
+                    <p>May 2028</p>
 
                     <h3>Li Po Chun United World College — Hong Kong</h3>
                     <p><strong>IBDP: Bilingual Diploma Awarded</strong></p>
                     <p>Higher level: Physics, Math AA, Geography; Standard level: English A, Chinese A, Chemistry</p>
-                    <p>August 2022 - May 2024</p>
+                    <p>May 2024</p>
+                    <p>SAT: 1540 (790M, 750E)</p>
                 </div>
                 <hr>
 
                 <div id="skills" class="section"></div>
-                    <h2>Technical Skills</h2>
+                    <h2>Technical Skills & Certificates</h2>
 
-                    <h3>Technical Skills:</h3>
-                    <p>Python, MySQL, Git, C++, HTML, CSS, Vuejs, Nodejs, AWS, GCP, Docker, Bash, Linux, Networking, MATLAB, Siemens NX, LTSpice, Project Management, Video Editing </p>
+                    <ul>
+                        <li>Python, MySQL, Git, HTML, CSS, Nodejs, GCP, Bash, Linux, Networking, Project Management</li>
+                        <li>Familiar with: C, C#, Unity, Vuejs, AWS, Video Editing</li>
+                        <li>Fall 2024: MATLAB, Siemens NX, LTSpice</li>
+                        <li><a href="https://bit.ly/lucentcert" target="_blank">Google IT Automation with Python</a></li>
+                    </ul>
                 </div>
                 <hr>
 
@@ -61,15 +66,15 @@
                     <h3>MIT Innovation Node Hong Kong</h3>
                     <p><strong>Intern, Teaching Assistant</strong> | Hong Kong | April 2023 – August 2024</p>
                     <ul>
+                        <li>200+ hours in assisted in providing support in course materials and assisting students to enhance their learning experience.</li>
                         <li>Conducted research to support MIT Node incentives, focused on emerging technologies and their impact on local education.</li>
-                        <li>Participated in workshops and brainstorming sessions to foster innovation and support the ideation of new projects within the organization.</li>
-                        <li>Assisted in providing support in course materials and assisting students to enhance their learning experience.</li>
+                        <li>Participated in workshops and brainstorming sessions to support the ideation of new projects within the organization. </li>
                     </ul>
 
                     <h3>Freelance Web Developer</h3>
                     <p><strong>Freelance/Remote</strong> | Hong Kong | May 2021 - Present</p>
                     <ul>
-                        <li>Freelance web developer with experience creating custom, responsive websites for 5+ small businesses and startups.</li>
+                        <li>Created custom, responsive websites (Static, Fullstack, API interface, etc) for 5+ small businesses, startups, and individuals.</li>
                         <li>Proficient in HTML, CSS, JavaScript, JS framework (VueJS), WordPress, and drag-and-drop interfaces (Wix, Squarespace, etc.)</li>
                     </ul>
 
@@ -83,7 +88,7 @@
                     <h3>Codabot</h3>
                     <p><strong>Project Manager/Teacher</strong> | Hong Kong | June 2021 - Oct. 2022</p>
                     <ul>
-                        <li>Led 4 web developers to create a working beta product for the subsidiary company of Codabot, Exmersive.ai, for the first round of venture capital using Unity, ReactJS, and AWS across 3 time zones.</li>
+                        <li>Led 4 web developers across 3 time zones to create a working beta product for the subsidiary company of Codabot, Exmersive.ai, for the first round of venture capital using Unity, ReactJS, and AWS.</li>
                         <li>Certified K-12 teacher specializing in teaching computational thinking to young learners using Lego blocks, Scratch, etc.</li>
                     </ul>
                 </div>
@@ -93,17 +98,17 @@
                     <h2>Projects</h2>
 
                     <h3>Custom Card Swipe System</h3>
-                    <p><strong>Passion project</strong> | Hong Kong | Sept. 2023 – May 2024</p>
+                    <p><strong>Passion project</strong> | Hong Kong | Sept. 2023 - May 2024</p>
                     <ul>
                         <li>Utilized Python, MySQL, Raspberry Pi, RFID, and Machine Learning to create a custom card swipe system with facial recognition for Li Po Chun United World College; process 500+ swipes per day.</li>
                         <li>Worked closely with school admin to fit safety requirements and implemented necessary features</li>
                     </ul>
 
                     <h3>Independent Machine Learning Research</h3>
-                    <p>Hong Kong | March 2022 – Oct. 2023</p>
+                    <p>Hong Kong | March 2022 - Oct. 2023</p>
                     <ul>
-                        <li>Utilized Python, Tensorflow, numpy to conduct research with the Long Short Term Memory algorithm to predict the closing price of S&P 500.</li>
-                        <li>Wrote a 4000 words essay regarding the topic independently for IBDP Extended Essay.</li>
+                        <li>Utilized Python, Tensorflow, numpy, Matplotlib to conduct research with the performance of Long Short Term Memory, Ridge Regression, and Random Forest to predict the closing price of S&P 500.</li>
+                        <li>Wrote a 4000 words research paper regarding the topic independently.</li>
                     </ul>
                 </div>
                 <hr>
@@ -122,24 +127,14 @@
                     <p><strong>Volunteer, Website Developer, Video Editor</strong> | Aug. 2023 - Present</p>
                     <ul>
                         <li>Continuing support from United World Schools team to help them build schools and create websites for fundraising</li>
-                        <li>Created website: <a href="https://reec.org.kh">https://reec.org.kh</a></li>
-                        <li>Created video for social media: <a href="https://www.instagram.com/reec.org.kh/">@reec.org.kh</a> (Instagram)</li>
+                        <li>Created website: <a href="https://reec.org.kh" target="_blank">https://reec.org.kh</a></li>
+                        <li>Created video for social media: <a href="https://www.instagram.com/reec.org.kh/" target="_blank">@reec.org.kh</a> (Instagram)</li>
                     </ul>
 
                     <h3>Li Po Chun Quan Cai</h3>
-                    <p>Aug. 2022 – May 2024</p>
+                    <p>Aug. 2022 - May 2024</p>
                     <ul>
-                        <li>Programming club, Basketball team, United World Schools Team, Peer Tutoring Tutor, Workout! Club</li>
-                    </ul>
-                </div>
-                <hr>
-
-                <div id="certifications" class="section">
-                    <h2>Certifications</h2>
-
-                    <h3>Certifications:</h3>
-                    <ul>
-                        <li><a href="https://coursera.org/share/fe2560edaa7c3e4c0e19b31e1f6f96e7">Google IT Automation with Python</a></li>
+                        <li>Programming club, Basketball team, United World Schools Team, Peer Tutoring Tutor (Math&Physics), Workout! Club </li>
                     </ul>
                 </div>
             </div>
